# schedule-events

./: Cargo.toml
migrations/2024-03-12-211356_events/: up.sql
src/: main.rs  models.rs  schema.rs
