[package]
name = "schedule-event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
diesel = { version = "2.0.0", features = ["postgres","r2d2","uuid","chrono"] }
dotenvy = "0.15"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
env_logger = "0.10.0"
